# Tech-Skills

./: .gitignore  CHANGELOG.md  GITHUB_COPILOT.md  README.md  SAFETY-GUARDRAILS.md  package.json
.claude/: .npmignore  AGENTS.md  MANIFEST.in  QUICKSTART.md  README.md  agentic-orchestrator.md  package.json  pyproject.toml  roles  settings.json  settings.local.json  setup.py  skills  skills-index.md
.claude/agents/: EXECUTION.md  ORCHESTRATOR-OVERVIEW.md  ROLE-REGISTRY.md  SKILL-REFERENCE.md  SKILL-REGISTRY.md  agent-schema.md  ai-ml-lead.md  data-lead.md  orchestrator-agent.md  platform-lead.md  product-lead.md  security-lead.md
.claude/commands/: README.md  ai.md  code-hardener.md  code-review.md  data-engineer.md  data.md  database-admin.md  dev-accelerator.md  maintenance-engineer.md  mcp.md  network-engineer.md  orchestrator.md  platform.md  product.md  project-guardian.md  security-architect.md  security-hardener.md  security.md  sre.md
.claude/hooks/: INSTALL.md  README.md  bash-safety-hook.py  edit-safety-hook.py  patterns.yaml  write-safety-hook.py
.claude/skill-docs/: README.md  ai-engineer.md  aws.md  azure.md  backend-developer.md  code-hardener.md  code-review.md  compliance-automation.md  compliance-officer.md  data-engineer.md  data-governance.md  data-scientist.md  database-admin.md  dev-accelerator.md  devops.md  docker.md  finops.md  frontend-developer.md  gcp.md  maintenance-engineer.md  meeting-strategy.md  ml-engineer.md  mlops.md  network-engineer.md  optimization-advisor.md  platform-engineer.md  process-changelog.md  process-documentation.md  product-designer.md  project-guardian.md  project-starter.md  qa-engineer.md  security-architect.md  security-hardener.md  sre.md  system-design.md  technical-writer.md
.claude/skills/: README.md  ai-engineer-advanced.md  ai-engineer.md  aws.md  azure.md  backend-developer.md  code-hardener.md  compliance-automation.md  compliance-officer.md  context-optimization.md  data-engineer-advanced.md  data-engineer.md  data-scientist.md  dev-accelerator.md  devops.md  docker.md  enterprise-dashboard.md  finops.md  frontend-developer.md  gcp.md  maintenance-engineer.md  mcp-management.md  meeting-strategy.md  mlops.md  optimization-advisor.md  orchestrator.md  platform-engineer.md  process-kanban.md  process-versioning.md  product-designer.md  project-guardian.md  project-starter.md  safety-guardrails.md  security-advanced.md  security-architect.md  security-hardener.md  system-design.md
(+234 files in other folders)
