[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tech-hub-skills"
version = "1.6.5"
description = "180+ production-ready AI agent skills for Claude Code and GitHub Copilot"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "6ogo"}
]
keywords = [
    "claude",
    "claude-code",
    "github-copilot",
    "copilot",
    "ai-agents",
    "skills",
    "llm",
    "enterprise",
    "vscode"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"

[project.scripts]
tech-hub-skills = "tech_hub_skills.cli:main"

[project.urls]
Homepage = "https://github.com/6ogo/Tech-Skills"
Repository = "https://github.com/6ogo/Tech-Skills"

[tool.setuptools.packages.find]
where = ["."]
include = ["tech_hub_skills*"]

[tool.setuptools.package-data]
tech_hub_skills = ["skills/*.md", "roles/**/*.md"]
